StaffCenter(FAQ, Contact Us, Book a free Demo and Video Tutorial) CRUD complete
Documents DocumentType Added

--- a/PMS-PropertyHapa.Staff/Views/Applications/AddApplication.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Applications/AddApplication.cshtml
@@ -16,7 +16,7 @@
     <meta name="author" content="">
 
     <link rel="icon" id="faviconIcon" type="image/x-icon">
-    <link rel="shortcut icon" href="" type="image/x-icon" id="Org_iconshort">
+    <link rel="shortcut icon" href="" type="image/x-icon" id="Org_iconshort"><a href="d:\shiraz\pms-property-happa\pms-propertyhapa.staff\views\applications\addapplication.cshtml">d:\shiraz\pms-property-happa\pms-propertyhapa.staff\views\applications\addapplication.cshtml</a>
     <title>PMC Portal</title>
     <!-- Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -291,7 +291,7 @@
                                         <div class="col">
                                             <div class="mb-3">
                                                 <label for="appGender" class="form-label">Gender</label>
-                                                <select class="form-select" id="appGender">
+                                                <select class="form-control select2" id="appGender">
                                                     <option selected disabled value="">Please Select</option>
                                                     <option value="male">Male</option>
                                                     <option value="female">Female</option>
@@ -304,7 +304,7 @@
                                         <div class="col">
                                             <div class="mb-3">
                                                 <label for="appMaritalStatus" class="form-label">Marital Status</label>
-                                                <select class="form-select" id="appMaritalStatus">
+                                                <select class="form-control select2" id="appMaritalStatus">
                                                     <option selected disabled value="">Please Select</option>
                                                     <option value="single">Single</option>
                                                     <option value="married">Married</option>
@@ -418,7 +418,7 @@
                                         <div class="col">
                                             <div class="mb-3">
                                                 <label for="empWorkStatus" class="form-label">Do you currently work here?</label>
-                                                <select class="form-select" id="empWorkStatus">
+                                                <select class="form-control select2" id="empWorkStatus">
                                                     <option selected disabled value="">Please Select</option>
                                                     <option value="true">Yes</option>
                                                     <option value="false">No</option>
@@ -735,7 +735,7 @@
                                         <div class="col">
                                             <div class="mb-3">
                                                 <label for="questionSmoke" class="form-label">Do you smoke?</label>
-                                                <select class="form-select" id="questionSmoke">
+                                                <select class="form-control select2" id="questionSmoke">
                                                     <option selected disabled value="">Please Select</option>
                                                     <option value="true">Yes</option>
                                                     <option value="false">No</option>
@@ -745,7 +745,7 @@
                                         <div class="col">
                                             <div class="mb-3">
                                                 <label for="questionBank" class="form-label">Have you filed for bankruptcy in the past?</label>
-                                                <select class="form-select" id="questionBank">
+                                                <select class="form-control select2" id="questionBank">
                                                     <option selected disabled value="">Please Select</option>
                                                     <option value="true">Yes</option>
                                                     <option value="false">No</option>
@@ -757,7 +757,7 @@
                                         <div class="col">
                                             <div class="mb-3">
                                                 <label for="questionEvict" class="form-label">Have you ever been evicted from a residential property?</label>
-                                                <select class="form-select" id="questionEvict">
+                                                <select class="form-control select2" id="questionEvict">
                                                     <option selected disabled value="">Please Select</option>
                                                     <option value="true">Yes</option>
                                                     <option value="false">No</option>
@@ -767,7 +767,7 @@
                                         <div class="col">
                                             <div class="mb-3">
                                                 <label for="questionRent" class="form-label">Have you ever refused to pay rent?</label>
-                                                <select class="form-select" id="questionRent">
+                                                <select class="form-control select2" id="questionRent">
                                                     <option selected disabled value="">Please Select</option>
                                                     <option value="true">Yes</option>
                                                     <option value="false">No</option>
@@ -779,7 +779,7 @@
                                         <div class="col">
                                             <div class="mb-3">
                                                 <label for="questionCrime" class="form-label">Have you ever been convicted of a crime?</label>
-                                                <select class="form-select" id="questionCrime">
+                                                <select class="form-control select2" id="questionCrime">
                                                     <option selected disabled value="">Please Select</option>
                                                     <option value="true">Yes</option>
                                                     <option value="false">No</option>
