--- a/PMS-PropertyHapa.Staff/Views/Budget/Create.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Budget/Create.cshtml
@@ -87,14 +87,15 @@
                                             <br />
                                             <div class="col-md-4" style="padding-left: 5px; padding-right: 5px;">
                                                 <label class=" mb-1" for="inputFirstName">BudgetType</label>
-                                                <select asp-for="BudgetType" class="form-control dropdownheight" required>
+                                                <select asp-for="BudgetType" class="form-control select2 dropdownheight" required>
+                                                    <option></option>
                                                     <option value="1">Profit & Loss</option>
                                                     <option value="2">Balance Sheet</option>
                                                 </select>
                                             </div>
                                             <div class="col-md-4" style="padding-left: 5px; padding-right: 5px;">
                                                 <label class=" mb-1">Type</label>
-                                                <select id="BudgetBy" name="BudgetBy" asp-for="BudgetBy" class="form-control dropdownheight" required onchange="budgetBy()">
+                                                <select id="BudgetBy" name="BudgetBy" asp-for="BudgetBy" class="form-control select2 dropdownheight" required onchange="budgetBy()">
                                                     <option value="">Select Value</option>
                                                     <option value="1">Property</option>
                                                 </select>
@@ -112,7 +113,7 @@
                                             <br />
                                             <div class="col-md-6" style="padding-left: 5px; padding-right: 5px;">
                                                 <label class="mb-1" for="StartingMonth">Starting Month</label>
-                                                <select id="StartingMonth" name="StartingMonth" asp-for="StartingMonth" class="form-control dropdownheight" required onchange="Month()">
+                                                <select id="StartingMonth" name="StartingMonth" asp-for="StartingMonth" class="form-control select2 dropdownheight" required onchange="Month()">
                                                     <option value="">Select Month</option>
                                                     <option value="1">January</option>
                                                     <option value="2">February</option>
