--- a/PMS-PropertyHapa.Staff/Views/Home/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Home/Index.cshtml
@@ -164,7 +164,7 @@
                     <div class="card-header card-no-border">
                         <div class="media">
                             <div class="media-body">
-                                <h5 class="mb-0">Building Revenue</h5>
+                                <h5 class="mb-0">Task Incident</h5>
                             </div>
                             <div class="icon-box onhover-dropdown">
                                 <i data-feather="more-horizontal"></i>
@@ -422,6 +422,37 @@
 <script>
     $(document).ready(function () 
     {
+        window.onload = function () {
+
+var chart = new CanvasJS.Chart("chartContainer", {
+	animationEnabled: true,
+	title:{
+		text: "Email Categories",
+		horizontalAlign: "left"
+	},
+	data: [{
+		type: "doughnut",
+		startAngle: 60,
+		//innerRadius: 60,
+		indexLabelFontSize: 17,
+		indexLabel: "{label} - #percent%",
+		toolTipContent: "<b>{label}:</b> {y} (#percent%)",
+		dataPoints: [
+			{ y: 67, label: "Inbox" },
+			{ y: 28, label: "Archives" },
+			{ y: 10, label: "Labels" },
+			{ y: 7, label: "Drafts"},
+			{ y: 15, label: "Trash"},
+			{ y: 6, label: "Spam"}
+		]
+	}]
+});
+chart.render();
+
+}
+
+
+
         var organizationName = localStorage.getItem('organizationName');
         if (localStorage.getItem("organizationName") != null) 
         {
