--- a/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
@@ -290,7 +290,7 @@
                                     </a>
                                 </li>
                                 <li class="sidebar-link">
-                                    <a class="sidebar-link sidebar-title link-nav no-arrow" href="@Url.Action("SearchDocuments","Documents")">
+                                    <a class="sidebar-link sidebar-title link-nav no-arrow" href="@Url.Action("Documents","Documents")">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg><span>Documents</span>
                                     </a>
                                 </li>
@@ -304,13 +304,9 @@
                                     </ul>
                                 </li>
                                 <li class="sidebar-list">
-                                    <a class="sidebar-link sidebar-title" href="#">
+                                    <a class="sidebar-link sidebar-title link-nav no-arrow" href="@Url.Action("Index","SupportCenter")">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-aperture"><circle cx="12" cy="12" r="10"></circle><line x1="14.31" y1="8" x2="20.05" y2="17.94"></line><line x1="9.69" y1="8" x2="21.17" y2="8"></line><line x1="7.38" y1="12" x2="13.12" y2="2.06"></line><line x1="9.69" y1="16" x2="3.95" y2="6.06"></line><line x1="14.31" y1="16" x2="2.83" y2="16"></line><line x1="16.62" y1="12" x2="10.88" y2="21.94"></line></svg><span>Support Center</span>
                                     </a>
-                                    <ul class="sidebar-submenu">
-                                        <li><a href="@Url.Action("AddTickets","SupportCenter")">Add Tickets</a></li>
-                                        <li><a href="@Url.Action("ViewTickets","SupportCenter")">View Tickets</a></li>
-                                    </ul>
                                 </li>
                             </ul>
                            @*  <div class="sidebar-img-section">
