--- a/PMS-PropertyHapa.Staff/Views/Tenant/AddTenant.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Tenant/AddTenant.cshtml
@@ -101,7 +101,7 @@
                                         <div class="col-sm-6 col-md-3">
                                             <div class="mb-3">
                                                 <label for="Gender" class="form-label">Gender</label>
-                                                <select class="form-control" id="Gender" name="Gender" required>
+                                                <select class="form-control select2" id="Gender" name="Gender" required>
                                                     <option value="">Select Gender</option>
                                                     <option value="Male">Male</option>
                                                     <option value="Female">Female</option>
@@ -159,7 +159,7 @@
                                         <div class="col-sm-6 col-md-3">
                                             <div class="mb-3">
                                                 <label for="AddTenantAsUser" class="form-label">Add Tenant as User</label>
-                                                <select class="form-control" id="AddTenantAsUser" name="AddTenantAsUser" required>
+                                                <select class="form-control select2" id="AddTenantAsUser" name="AddTenantAsUser" required>
                                                     <option value="" disabled selected hidden>Select</option>
                                                     <option value="true">Yes</option>
                                                     <option value="false">No</option>
@@ -230,7 +230,7 @@
                                         <div class="col-sm-6 col-md-3">
                                             <div class="mb-3">
                                                 <label for="Country">Country</label>
-                                                <select class="form-control" id="Country" name="Country">
+                                                <select class="form-control select2" id="Country" name="Country">
                                                     <option value="">Select Country</option>
                                                     <option value="Germany">Germany</option>
                                                     <option value="Canada">Canada</option>
@@ -512,7 +512,7 @@
                                                     <div class="col-sm-6 col-md-3">
                                                         <div class="mb-3">
                                                             <label for="CoTenant_@(i)__Country">Country:</label>
-                                                            <select class="form-control" name="CoTenant[@i].Country" id="CoTenant_@(i)__Country" data-selected-country="@coTenant.Country">
+                                                            <select class="form-control select2" name="CoTenant[@i].Country" id="CoTenant_@(i)__Country" data-selected-country="@coTenant.Country">
                                                                 <option value="">Select Country</option>
                                                                 <option value="USA">USA</option>
                                                                 <option value="Canada">Canada</option>
@@ -584,7 +584,15 @@
                                         <div class="col-sm-6 col-md-3">
                                             <div class="mb-3">
                                                 <label for="Account_Currency">Account Currency</label>
-                                                <input type="text" class="form-control" id="Account_Currency" name="Account_Currency" placeholder="Enter currency" value="@Model?.Account_Currency">
+                                                @* <input type="text" class="form-control" id="Account_Currency" name="Account_Currency" placeholder="Enter currency" value="@Model?.Account_Currency"> *@
+                                                <select class="form-control select2" id="Account_Currency" name="Account_Currency" data-selected-currency="@Model?.Account_Currency">
+                                                    <option value="" selected disabled hidden>Select Currency</option>
+                                                    <option value="USD">USD - United States Dollar ($)</option>
+                                                    <option value="EUR">EUR - Euro (€)</option>
+                                                    <option value="GBP">GBP - British Pound (£)</option>
+                                                    <option value="JPY">JPY - Japanese Yen (¥)</option>
+                                                    <option value="INR">INR - Indian Rupee (₹)</option>
+                                                </select>
                                             </div>
                                         </div>
                                     </div>
@@ -1150,6 +1158,13 @@
                 selectElement.value = selectedCountry;
             }
         });
+
+        var selectElement = document.getElementById('Account_Currency');
+        var selectedCurrency = selectElement.getAttribute('data-selected-currency');
+
+        if (selectedCurrency) {
+            selectElement.value = selectedCurrency;
+        }
     });
 
     function updateManufacturerString(dateValue, index) {
