Dashboard - graphs added

--- a/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
@@ -76,6 +76,8 @@
     <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/style.css">
     <link id="color" rel="stylesheet" href="~/Dashboard/assets/css/color-1.css" media="screen">
     <!-- Responsive css-->
+    <link rel="stylesheet" type="text/css" href="~/dashboard/assets/css/vendors/jkanban.css" />
+
     <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/responsive.css">
     <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.4/dist/sweetalert2.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
@@ -406,8 +408,10 @@
     <script src="~/Dashboard/assets/js/chart/knob/knob-chart.js"></script>
     <script src="~/Dashboard/assets/js/chart/apex-chart/apex-chart.js"></script>
     <script src="~/Dashboard/assets/js/chart/apex-chart/stock-prices.js"></script>
+    <script src="~/dashboard/assets/js/jkanban/jkanban.js"></script>
     <script src="~/Dashboard/assets/js/notify/bootstrap-notify.min.js"></script>
     <script src="~/Dashboard/assets/js/dashboard/default.js"></script>
+    <script src="~/dashboard/assets/js/chart-widget.js"></script>
     <script src="~/Dashboard/assets/js/datepicker/date-picker/datepicker.js"></script>
     <script src="~/Dashboard/assets/js/datepicker/date-picker/datepicker.en.js"></script>
     <script src="~/Dashboard/assets/js/datepicker/date-picker/datepicker.custom.js"></script>
