--- a/PMS-PropertyHapa.Staff/Views/Landlord/AddLandlord.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Landlord/AddLandlord.cshtml
@@ -194,7 +194,7 @@
                                         </div>
 
                                         <!-- Additional Email Address (Initially Hidden) -->
-                                        <div class="col-sm-6 col-md-3" id="additionalEmailField" style="display: none;">
+                                        <div class="col-sm-6 col-md-3" id="additionalEmailField" style="display: @(Model?.EmailAddress2 != null ? "block" : "none")">
                                             <div class="mb-3">
                                                 <label for="EmailAddress2" class="form-label">Email Address2</label>
                                                 <input type="email" class="form-control" id="EmailAddress2" title="Please enter a valid email address." value="@Model?.EmailAddress2" name="EmailAddress2" required />
@@ -213,7 +213,7 @@
                                         </div>
 
                                         <!-- Additional Phone Number (Initially Hidden) -->
-                                        <div class="col-sm-6 col-md-3" id="additionalPhoneField" style="display: none;">
+                                        <div class="col-sm-6 col-md-3" id="additionalPhoneField" style="display: @(Model?.PhoneNumber2 != null ? "block" : "none")">
                                             <div class="mb-3">
                                                 <label for="PhoneNumber2" class="form-label">Phone Number2</label>
                                                 <input type="number" class="form-control" id="PhoneNumber2" name="PhoneNumber2" value="@Model?.PhoneNumber2" required pattern="/^(\+{0,})(\d{0,})([(]{1}\d{1,3}[)]{0,}){0,}(\s?\d+|\+\d{2,3}\s{1}\d+|\d+){1}[\s|-]?\d+([\s|-]?\d+){1,2}(\s){0,}$/gm" title="Please enter a valid phone number." />
@@ -295,7 +295,7 @@
                                             </div>
                                         </div>
 
-                                        <div class="col-sm-6 col-md-3" id="emergencyContactField" style="display: none;">
+                                        <div class="col-sm-6 col-md-3" id="emergencyContactField" style="display: @(Model?.EmergencyContactInfo != null ? "block" : "none")">
                                             <div class="mb-3">
                                                 <label for="EmergencyContactInfo" class="form-label">Emergency Contact Info</label>
                                                 <input type="text" class="form-control" id="EmergencyContactInfo" name="EmergencyContactInfo" value="@Model?.EmergencyContactInfo" required />
