GetLandlordData and GetTenantData By Id API

--- a/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
@@ -404,6 +404,8 @@
     <script src="~/Dashboard/assets/js/config.js"></script>
     <!-- Plugins JS start-->
     <script src="~/Dashboard/assets/js/sidebar-menu.js"></script>
+    <script src="~/Dashboard/assets/js/chart/google/google-chart.js"></script>
+    <script src="~/Dashboard/assets/js/chart/google/google-chart-loader.js"></script>
     <script src="~/Dashboard/assets/js/chart/knob/knob.min.js"></script>
     <script src="~/Dashboard/assets/js/chart/knob/knob-chart.js"></script>
     <script src="~/Dashboard/assets/js/chart/apex-chart/apex-chart.js"></script>
